One deploy ref, and a wire alias that names its tier
The platform plane loses its own deploy branch. Both planes now ask the same
question of a green build — does an environment listen to this ref — so
`environment/<name>` is the whole set. `platform/main`,
`SpecSource.DEFAULT_PLATFORM_BRANCH` and the spec's `branch:` key are gone, and
`PdService.branch` stops being written (the column and the read surface stay:
the client renders the field, and nothing is owed a migration for a value that
stops being set).

With several environments this means any environment's branch rolls the one
platform instance. That is acceptable while one environment exists and has to be
answered before the second is created.

The wire alias — the address peers dial — becomes `<env>-<app>` for an
environment application, so two tiers can hold one application's address on the
legacy network they share. A platform service keeps the bare name; its
repository carries the plane already. `PdNetworks.alias` derives it once,
because the run's `--network-alias`, every join's `--alias` and the predecessor
search have to agree. The predecessor search asks about the bare name too, or
the first deployment under the qualifier would run a second copy beside the one
serving.

Platform container names drop the `platform` segment for the same reason the
alias keeps the bare name: `qits-pd-platform-qits-platform-artifacts-…` says it
twice.

The spec parser trades `branch:` for an optional `deploy_branches:`. Nothing
here reads it back — the release flow does — but this parser fails a deployment
on an unknown key, so a key another reader needs is a key this reader has to
know.

This repo becomes an environment service: one instance per environment,
deploying its environment.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>